# infra_practice

./: .gitignore  README.md  pyproject.toml
.github/: build.yaml
.github/workflows/: deploy.yaml  format-check.yaml  test.yaml
infra/docker/: publish.Dockerfile
infra/kubernetes/: deploy-staging.yaml
k8/deployment/: deploy.yaml
k8/replicas/: replica1.yml
k8/resource-quota/: rq.yaml
k8/service/: nodeport.yaml  service.yaml
src/: main.py
src/api/publish/: router.py
src/api/publish/models/: __init__.py
src/common/utils/: datetime.py
src/common/utils/observability/: config.py  logger.py  middleware.py
src/config/: __init__.py  config.py  development.py  production.py  staging.py
src/tests/: publish_test.py
tests/: publish_test.py
