[tool.poetry]
name = "k8-hands-on"
version = "0.0.0"
description = "a proyect to practice k8"
authors = ["arieldelgrande <ariel.delgrande@meltwater.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "3.13.3"
gunicorn = "^22.0.0"
fastapi = { extras = ["standard"], version = "^0.115.12" }
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
ruff = "^0.11.9"
pytest-mock = "^3.14.0"
pytest-cov = "^6.2.1"
greenlet = "^3.2.3"
fastapi = { extras = ["standard"], version = "^0.115.12" }
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
